# ezhavadhu-desiya-tamizh-manadu

./: .gitignore  README.md  a_prioris.py  analysis.py  model.py  pyproject.toml  runs.py  உருவகப்படுத்துதல்கள்.py  எழுத்துரு.py  கருந்தலைப்புழு-அ.csv  பகுப்பாய்வு.py  மாதிரி.py
