[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Julien Malard-Adam <julien.malard@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
spotpy = "^1.5.14"
xarray = "^2022.3.0"
matplotlib = "^3.5.1"
mplcairo = "^0.4"
PyQt5 = "^5.15.6"
tikon = {git = "https://github.com/julienmalard/tikon", rev = "bf4911a"}
netCDF4 = "^1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
